data/derived/comb/progs/unify/prog0804.ml.out
Characters 468-480:
  | NewExprB (e1,e2,e3) -> eval(e1,x,y) + eval(e2,x,y) + eval(e3,x,y);;
                           ^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
